# modab_root_finder

./: .gitignore  LICENSE  README.md  meson.build  pyproject.toml
.spin/: cmds.py
doc/: conf.py  index.rst
example_pkg/: __init__.py
modab_root_finder/: __init__.py  bench.py  meson.build  modab_from_paper.cs  modab_from_paper.pyx  modab_from_proektsoftbg_encoded.py  modab_modern_impl.cs  modab_modern_impl.pyx  modab_refactor.pyx  modern.pyx  mpmath_root.py  rect.pyx  step_introspect.pyx
modab_root_finder/submodule/: meson.build
modab_root_finder/tests/: test_basic.py  test_core.py  test_modern.py  test_refactor.py  test_refactor_hypothesis.py  util.py
requirements/: all.txt
